tests/e2e/semantics/list_any_assign.error
Error: syntax error in story at line 2, column 1

2|    a = 1
      ^

E0100: Can't assign `int` to `List[any]`
